(min-)height: 115% on .desktop only caused issue with the gradient when container is expanded. To fix the issue, box had to be moved out of the 'main' where everything in, so overflow: hidden can be used on the main without hiding the box

--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,13 @@
 html,
 body {
-  padding: 0;
   margin: 0;
   font-family: 'Kumbh Sans', sans-serif;
   background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 * {
+  box-sizing: border-box;
   margin: 0;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-}
-
-p,
-h2 {
-  overflow-wrap: break-word;
 }
 
 img {
@@ -30,15 +15,12 @@ img {
   max-width: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 /* ------------------------------------------------ */
 body {
   padding: 25px;
+  /* to maintain gradient when container exceeds view it has to be min-height, not height */
   min-height: 100vh;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
@@ -147,6 +129,7 @@ details > p {
     max-width: revert;
     margin-top: revert;
     margin-right: -50px;
+    overflow: hidden;
   }
 
   main {
@@ -155,6 +138,12 @@ details > p {
     grid-gap: 20px;
     margin-top: 20px;
     position: relative;
+  }
+
+  .desktop-only.box {
+    position: absolute;
+    transform: translate(-100px, 155px);
+    z-index: 2;
   }
 
   .content h1 {
@@ -170,25 +159,11 @@ details > p {
 
   .desktop-only {
     display: revert;
-    min-height: 115%;
     transform: translateY(-65px);
   }
 
   .mobile-only {
     display: none;
-  }
-
-  .desktop-only .box {
-    position: absolute;
-    top: 207px;
-    left: -95px;
-    z-index: 2;
-  }
-
-  .desktop-only .img-wrapper {
-    position: relative;
-    overflow: hidden;
-    height: 100%;
   }
 
   .woman-online-img {
